--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,8 @@
     "mongodb": "^5.6.0",
     "mongoose": "^7.2.2",
     "node": "^20.2.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "redis": "^4.6.7",
+    "redis-server": "^1.2.2"
   }
 }
